[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsafe"
version = "1.0.0"
description = "Is your code quantum-safe? Scan any codebase for quantum-vulnerable cryptography. Grade A+ to F."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Miles Thompson", email = "miles@overseerclaw.uk"},
]
keywords = ["quantum-safe", "cryptography", "security", "scanner", "pqc", "nist", "migration", "qsafe", "auto-fix", "cbom", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
qsafe = "pqc_scan_cli:main"
pqc-scan = "pqc_scan_cli:main"

[project.urls]
Homepage = "https://github.com/Miles0sage/quantum-mcp"
"Bug Tracker" = "https://github.com/Miles0sage/quantum-mcp/issues"
Source = "https://github.com/Miles0sage/quantum-mcp"
Documentation = "https://github.com/Miles0sage/quantum-mcp/blob/master/INSTALL.md"

[tool.setuptools]
py-modules = ["pqc_posture", "pqc_scan_cli", "ast_analyzer", "auto_fix", "tls_scanner", "html_report"]
